--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="filler"></div>
-  <div class="container footer" style="border-top: 1px solid #bbb; width: 100%; background:#ddd; padding:10px; margin:0px">
+  <footer class="container footer" style="border-top: 1px solid #bbb; width: 100%; background:#ddd; padding:10px; margin:0px">
      <div class="span2 offset2 edit_link">
          <%= link_to "Terms of service", terms_of_service_path %><br/>
          <%= link_to "Privacy information", privacy_path%> <br/>
@@ -18,4 +18,4 @@
          <div class="fb-like" data-href="https://www.facebook.com/tiniHost" data-send="true" data-width="150" data-show-faces="true"></div><br/>
       </div>               
   </div>
-</div>
+</footer>
