--- a/app/views/site_mailer/mail_friend.html.erb
+++ b/app/views/site_mailer/mail_friend.html.erb
@@ -19,7 +19,7 @@
       <div class="filler"></div>
       
       <div class="row">
-         Please visit us at www.Tinihost.com to learn more.   
+         Please visit us at <%= link_to "www.tiniHost.com", "http://www.tinihost.com" %> to learn more.   
       </div>
       <div class="filler"></div>
       <div class="row">
