--- a/app/views/site_mailer/signup_confirmation.html.erb
+++ b/app/views/site_mailer/signup_confirmation.html.erb
@@ -1,6 +1,4 @@
 <div class="span8">
-   <%= image_tag("tinihost2.png", alt:"tinihost logo") %>
-   <br/><br/>
    <p> Hello <%= @user.firstname.capitalize %>, </p>
 
    <p> Thank you for registering with tiniHost. Please click on the link below or paste it into your browser to activate your account.</p>
@@ -12,7 +10,7 @@
    www.tiniHost.com
    <br/><br/>
    <hr/>
-   <p id="hint"> You are receiving this email because your email address was used to sign up for a tiniHost account recently. Please disregard if you are not the intended recipient. </p>
+   <p style="color:#666"> You are receiving this email because your email address was used to sign up for a tiniHost account recently. Please disregard if you are not the intended recipient. </p>
    
 </div>
 
