--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
    }(document, 'script', 'facebook-jssdk'));
    </script>
 
-   <header>
+   <div class="header">
       <div class="container">
          <div class="row">
             <div class="span3">
@@ -63,7 +63,7 @@
             <% end %>
 	      </div>
 	      </div>      
-	</header>
+	</div>
        
 	   <div class="container">
 	       <% flash.each do |key, value| %>
