--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -78,11 +78,12 @@ a {
 
 a.lighter {
 	&:visited, & {
-		color:white;
+		color:#eee;
 	};
 	
 	&:hover {
 		color: #eee;
+		text-decoration: underline;
 	};
 }
 
