--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
 			   <% else %>
 			      <div class="span5 header-menu"> 
               
-                  <%= link_to "sign in ", signin_path %>
+                  <%= link_to "Sign in ", signin_path %>
                </div>
             <% end %>
 	      </div>
