adding title description

--- a/app/views/forumposts/index.html.erb
+++ b/app/views/forumposts/index.html.erb
@@ -11,7 +11,7 @@
   })();
 </script>
 <% end %>
-<% provide(:title, "Corkboard") %>
+<% provide(:title, "request a host on the Corkboard") %>
 <div class="container">
    <%= render "corkboard_nav" %>
 </div>
