--- a/app/views/pages/find.html.erb
+++ b/app/views/pages/find.html.erb
@@ -12,7 +12,7 @@
 </script>
 <% end %>
 
-<% provide(:title, 'find a host') %>
+<% provide(:title, 'find a host for a local experience') %>
 <div class="container">
    
 <%= render "shared/user_banner" %>
