--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
 </script>
 <% end %>
 
-<%= provide(:title, 'search') %>
+<%= provide(:title, 'find a host') %>
 <div class="container">
    
 <div class="row">
