--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= provide(:title, 'connecting travelers and local guides') %>
+
 <% content_for (:head_tags) do%>
 <script type="text/javascript">
   var _gaq = _gaq || [];
