--- a/app/views/pages/_faq.html.erb
+++ b/app/views/pages/_faq.html.erb
@@ -7,6 +7,9 @@
    <br/>
    <h4>The option to review a user only becomes available after you have completed a meetup with him or her. This is our way of trying to keep the reviews honest and reliable.</h4>
    <br/>
+   <strong> Does tiniHost provide lodging? </strong>
+   <br/>
+   <h4>tiniHost currently only offers activity based services. If you're looking for a place to sleep, try <%= link_to "CouchSurfing", "http://www.couchsurfing.org" %>.</h4><br/>
    <strong> Can I offer multiple host services (ie. translator and chauffeur)? </strong><br/>
    <h4>No. Each host profile is associated with only one type of service to keep things straightforward. You can however note additional services in your own service description. </h4><br/>
    <strong> Can I deactivate my host status after becoming a host? </strong>
