--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,7 +11,9 @@
   })();
 </script>
 <% end %>
-<% provide(:title, 'how it works')%>
+<% provide(:title, 'learn how tiniHost works')%>
+<% provide(:description_tag, "Learn how tiniHost works for travelers and hosts.") %>
+
 <div class="container">
    <div class="row">
       <div class="span3 offset" style="width: 200px;">
