--- a/app/views/pages/find.html.erb
+++ b/app/views/pages/find.html.erb
@@ -12,7 +12,8 @@
 </script>
 <% end %>
 
-<% provide(:title, 'find a host for a local experience') %>
+<% provide(:title, 'find a host for a local travel experience') %>
+<% provide(:description_tag, "find a local guide for fun activities.") %>
 <div class="container">
    
 <%= render "shared/user_banner" %>
