--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'General settings') %>
+<% provide(:title, 'general settings') %>
 <div class="filler"></div>
 
 <%=render "shared/your_header", id: @user.id, text:"Your settings" %>
