--- a/app/views/forumposts/_corkboard_nav.html.erb
+++ b/app/views/forumposts/_corkboard_nav.html.erb
@@ -2,8 +2,8 @@
    <div class="span12 top-banner" id="cork">
       <div class="row">
          <div class="span7">
-             <%= image_tag("traveler_pol.png") %>
-            <%= image_tag("host_pol.png") %>
+             <%= image_tag("traveler_pol.png", alt: "travelers, don't want to look for hosts? Have them come to you. Post what you're looking for here and hosts will contact you if there is a match.") %>
+            <%= image_tag("host_pol.png", alt: "hosts, are you offering exactly what someone's looking for? Respond and tell them why you would be perfect for the job.") %>
          </div>
         
          <div class="span5" id="overlay">
