--- a/app/views/shared/_user_banner.html.erb
+++ b/app/views/shared/_user_banner.html.erb
@@ -2,8 +2,8 @@
    <div class="span12 top-banner" id="weave">
       <div class="row">
          <div class="span7">
-            <%= image_tag "london_pol.png" %>
-            <%= image_tag "paris_pol.png" %>
+            <%= image_tag "london_pol.png", alt: "london bridge" %>
+            <%= image_tag "paris_pol.png", alt: "eiffel tower" %>
          </div>
          
          <div class="span5" id="overlay" style=" height:230px">
