--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -44,7 +44,10 @@
           <% end %>
        </div>
        <div class="filler"></div>
+       <p class="hint"> File must be in jpg, png, or gif. File size must be less than 1MB. </p>
+       
        <%=render 'images/img_upload'%>
+       
     </div>
   </div>
  <% end %> 
