--- a/app/views/pages/_hostinfo.html.erb
+++ b/app/views/pages/_hostinfo.html.erb
@@ -20,6 +20,7 @@ Leaving it entirely up to you and the traveler. Just make sure you agree on the 
 
 <h4> <b>IMPORTANT:</b> When travelers book meetups with you, they are agreeing to what you are asking for in exchange. Conditions of the exchange cannot be changed after the initial meeting request and any monetary amount agreed upon will be exchanged in person.
 <br/><br/><br/>
+<a name="host_duty"></a>
 <h2> Host duty </h2>
 <h4>Go on, pick what you want to be.</h4><br/><br/>
 <div class="row">
