--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
+<% user = @user unless !user.nil? %>
 <% profile = user.hostprofile%>
 <% service_title = Service.find_by_id(profile.service).title %>
-
 <div class="span4">
    <div class="thumbnail" id="badge">
       <%= link_to image_tag(find_display_imgurl(user.id, "medium"), id: "main"), user%>
