--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,16 @@
   <%= yield(:head_tags) %>
 </head>
 <body>
-   <div id="fb-root"></div>
-   <script>(function(d, s, id) {
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) return;
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
+   <div id="fb-root"></div><script>window.fbAsyncInit = function() {  
+   FB.init({appId: '401017706644512', status: true, cookie: true,  
+   xfbml: true});  
+   };  
+   (function() {  
+   var e = document.createElement('script'); e.async = true;  
+   e.src = document.location.protocol +  
+   '//connect.facebook.net/en_US/all.js';  
+   document.getElementById('fb-root').appendChild(e);  
+   }());  
    </script>
 
    <div class="header">
@@ -64,19 +66,19 @@
                </div>
             <% end %>
 	      </div>
-	      </div>      
+	   </div>      
 	</div>
        
-	   <div class="container">
-	       <% flash.each do |key, value| %>
-               <% if "#{key}" == "error" %>
-                  <%= content_tag(:div, value, class: "alert alert-error") %>
-               <% else %>
-                  <%= content_tag(:div, value, class: "alert alert-success") %>
-               <% end %>
-            <% end %>
-	   </div>   
-      <%= yield %>
+	<div class="container">
+     <% flash.each do |key, value| %>
+         <% if "#{key}" == "error" %>
+            <%= content_tag(:div, value, class: "alert alert-error") %>
+         <% else %>
+            <%= content_tag(:div, value, class: "alert alert-success") %>
+         <% end %>
+      <% end %>
+   </div>   
+   <%= yield %>
      			
 </body>
 </html>
