--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,10 @@
 <div class="filler"></div>
-  <footer class="container footer" style="border-top: 1px solid #bbb; width: 100%; background:#ddd; padding:10px; margin:0px">
-     <div class="span2 offset2 edit_link">
+<div id="footer">
+   
+  <footer class="container">
+     <div class="row">
+      
+     <div class="span2 edit_link">
          <%= link_to "Terms of service", terms_of_service_path %><br/>
          <%= link_to "Privacy information", privacy_path%> <br/>
          <%= mail_to "team@tinihost.com", "Contact" %><br/>
@@ -9,7 +13,7 @@
      <div class="span5">
       © tiniHost is a service that connects travelers to locals for a more authentic and original travel experience. We encourage socially and environmentally aware travel practices. We aim to build a respectful and trustworthy global travel community. 
      </div>
-     <div class="span2 offset">
+     <div class="span2">
        <%= link_to image_tag("facebook.png", alt: "Tinihost facebook page", size: "45x45", style: "padding:0px; margin:0px"), "https://www.facebook.com/tiniHost" %>
          <%= link_to image_tag("twitter.png", alt: "Tinihost twitter page", size: "45x45"), "https://twitter.com/tinihost" %> 
       </div>         
@@ -18,4 +22,7 @@
          <div class="fb-like" data-href="https://www.facebook.com/tiniHost" data-send="true" data-width="150" data-show-faces="true"></div><br/>
       </div>               
   </div>
+  </div>
+  
 </footer>
+</div>
