--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -441,6 +441,11 @@ input#image_photo{
 }
 #footer {
 	padding-top:50px;
+	border-top: 1px solid #bbb; 
+	width: 100%; 
+	background:#ddd; 
+	padding:10px 0px; 
+	margin:0px;
 }
 
 .bottomnav{
